# Anatomically-Consistent-Low-Dose-CT-Denoising

./: LICENSE_PENDING.md  OPEN_SOURCE_RELEASE_NOTES.md  README.md  pyproject.toml  requirements.txt
code/configs/: eval.yaml  eval_lidc_debug_test.yaml  eval_lidc_debug_test_tuned.yaml  eval_lidc_debug_val.yaml  eval_lidc_debug_val_tuned.yaml  eval_lidc_full_test_default.yaml  eval_lidc_full_test_tuned.yaml  eval_lidc_full_val_tuned.yaml  eval_lidc_hybrid_medium_test.yaml  eval_lidc_hybrid_medium_test_best.yaml  eval_lidc_hybrid_medium_test_candidate.yaml  eval_lidc_hybrid_medium_val.yaml  eval_lidc_hybrid_medium_val_best.yaml  eval_lidc_hybrid_medium_val_candidate.yaml  eval_lidc_medium_no_edge_test.yaml  eval_lidc_medium_no_edge_val.yaml  eval_lidc_medium_test_tuned.yaml  eval_lidc_medium_val_tuned.yaml  eval_mock_dicom_debug.yaml  eval_redcnn_medium_test.yaml  eval_redcnn_medium_val.yaml  eval_synth_best.yaml  eval_synth_best_psnr.yaml  eval_synth_hq.yaml  eval_synth_hq_no_edge.yaml  eval_synth_trainable.yaml  eval_synth_trainable_no_edge.yaml  eval_tiny.yaml  train.yaml  train_lidc_debug.yaml  train_lidc_hybrid_debug.yaml  train_lidc_hybrid_medium.yaml  train_lidc_medium.yaml  train_lidc_medium_no_edge.yaml  train_lidc_pretrained_hybrid_debug.yaml  train_mock_dicom_debug.yaml  train_redcnn_medium.yaml  train_synth_hq.yaml  train_synth_hq_no_edge.yaml  (+4 more)
docs/: CHECKPOINTS.md  DATA_PREPARATION.md  ENVIRONMENT.md  EXPERIMENTS.md  MANIFEST.md  RESULTS.md
paper/: neurips_2024.tex
presentation/: ldct_hybrid_egldm_3min_presentation.pptx  ldct_hybrid_egldm_3min_script.txt
(+62 files in other folders)
